--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,11 +18,10 @@
             </div>
         </div>
         <div class="navigation">
-            <ul>
-                <li><a href="#1">Про себе</a></li>
-                <li><a href="#2">ХНТУ</a></li>
-                <li><a href="#3">Tech & Soft Skills</a></li>
-                <li><a href="#4">Детальна інформаця</a></li>
+                <ul-li-a href="#1">Про себе</ul-li-a>
+                <ul-li-a href="#2">ХНТУ</ul-li-a>
+                <ul-li-a href="#3">Tech & Soft Skills</ul-li-a>
+                <ul-li-a href="#4">Детальна інформаця</ul-li-a>
         </div>
         <div class="contant_wrapper">
             <div class="content">
