--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
             </div>
         </div>
         <div class="navigation">
-                <ul-li-a href="#1">Про себе</ul-li-a>
-                <ul-li-a href="#2">ХНТУ</ul-li-a>
-                <ul-li-a href="#3">Tech & Soft Skills</ul-li-a>
-                <ul-li-a href="#4">Детальна інформаця</ul-li-a>
+            <ul>
+                <li><a href="#1">Про себе</a></li>
+                <li><a href="#2">ХНТУ</a></li>
+                <li><a href="#3">Tech & Soft Skills</a></li>
+                <li><a href="#4">Детальна інформаця</a></li>
+            </ul>
         </div>
         <div class="contant_wrapper">
             <div class="content">
